@@ -10,6 +10,8 @@ version 1.1.2:
 	* More MSN bug fixes (Felipe Contreras)
 	* Fix queue messages to Docklet when not globally away (Robert McQueen)
 	* Fix some leaks
+	* The Autopackage now builds both the mozilla-nss and the gnutls
+	  ssl plugins, and requires at least one of those libraries.
 
 version 1.1.1 (12/28/2004):
 	* Allow SILC authentication via public key if your key is password
